修复一些错误，适应1.16.5